--- a/src/components/vote/template.pug
+++ b/src/components/vote/template.pug
@@ -10,7 +10,7 @@ shell-app
           img(:src="vote.logo").o-profil-pic.p-hcenter-rel.b-reg.d-block.brad-100
           h2.d-block.m-025.mb-0.f-bold.f-stm {{ vote.brand }}
           span.d-block.pl-05.f-grey {{ vote.desc }}
-          span.d-block.pt-025.f-sxs.f-grey Voir la page du concours
+          span.d-block.f-sxs.f-grey Voir la page du concours
         
     .o-width-container.p-rel.d-inblock
       .d-row-flex.d-flex-spacebet.pl-1.pr-1
