Apparition popin d'optin

--- a/src/components/layout/layer-optin/template.pug
+++ b/src/components/layout/layer-optin/template.pug
@@ -1,3 +1,3 @@
-div.o-optin
-  a.d-block.w100.p-1.c-backbg.brad-4.f-stm.f-red.f-center Signaler cette photo
+div(v-show="display").o-optin
+  a.d-block.w100.p-1.c-backbg.brad-4.f-stm.f-red.f-center {{ text }}
   a(@click="").d-block.mt-2.f-center.f-white.f-dec-it annuler
