Disparition popin et reinit du store au click ou retour

--- a/src/components/vote/share-popin/template.pug
+++ b/src/components/vote/share-popin/template.pug
@@ -14,7 +14,7 @@ div
               
   ul.d-col-flex.d-flex-vm.mb-1.no-list
     li.p-1.f-stl.f-reg
-      button(@click="displayOptin").no-link.f-dgrey Signaler
+      button(@click="displayOptin").no-link.f-dgrey.no-deco Signaler
     li.w-100.p-1.pl-5.pr-5.f-stl.f-reg.f-center.f-dgrey
       .pb-05 lien à partager :
       .f-break {{ currentUrl }}
