--- a/src/components/vote/template.pug
+++ b/src/components/vote/template.pug
@@ -15,7 +15,7 @@ shell-app
     .o-width-container.p-rel.d-inblock
       .d-row-flex.d-flex-spacebet.pl-1.pr-1
         span.f-light n°{{ index + 1}}
-        a(@click="displayPopin = true" ).no-link
+        a(@click="displayedPopin = true" ).no-link
           span.o-more
       img(:src="displayImage").o-plain-img
     
@@ -30,5 +30,5 @@ shell-app
         svg(v-show="index !== indexMax" viewBox="0 0 132.98 257").o-svg-btn.va-mid.h-100.w-30.trotZ-180
           use(xlink:href="#ico-leftArrow")
   
-  layer-popin(v-show="displayPopin")
-    share-popin(@displayPopin="displayPopin = $event" :brand="vote.brand" :desc="vote.desc" :logo="vote.logo")
+  layer-popin(v-show="displayedPopin")
+    share-popin(@displayPopin="displayPopin" :brand="vote.brand" :desc="vote.desc" :logo="vote.logo")
