--- a/src/components/image/template.pug
+++ b/src/components/image/template.pug
@@ -8,7 +8,7 @@ shell-app
       .p-abs.p-vhcenter-abs.w-100.f-center
         .o-width-container.d-inblock
           .o-tile__infos--long.d-row-flex.d-flex-spacebet.d-flex-vm.pt-2.pb-1
-            a(href="profil.html").no-link.d-row-flex.d-flex-spacebet.d-flex-vm 
+            router-link(to="/user").no-link.d-row-flex.d-flex-spacebet.d-flex-vm 
               img(:src="media.winner.portrait" alt="logo").o-tile__logo--long.b-1.brad-100.mt-neg025
               span.va-mid
                 span.pl-1.f-stm.pr-1.f-grey {{ media.winner.name }}
