Nouveau routage vers contest

--- a/src/components/flux/tile/template.pug
+++ b/src/components/flux/tile/template.pug
@@ -1,5 +1,5 @@
 div
-  router-link(to="/contest").no-link
+  router-link(:to="'/contest/' + data.id").no-link
     
     //- CLOSED
     div(v-if="data.closed")
