--- a/src/components/contest/template.pug
+++ b/src/components/contest/template.pug
@@ -4,7 +4,7 @@ shell-app
     //- block a changer dans validation et info
     block contestContent
       .pl-2.pr-2  
-        p.p-rel.mt-3.f-center.pl-05.pr-05.sep-bef.sep-aft.f-stl {{ contest.infos }}
+        p.p-rel.mt-3.f-center.pl-05.pr-05.sep-bef.sep-aft.f-stl {{ contest.info }}
       .pl-1.pr-1.pt-2
         ul.d-row-flex.no-list.b-reg.brad-6.pt-1.pb-1
           li.p-hcenter-rel.d-flex-eq.f-light.f-si 
