Ajout URL dans popin photo vote et display de l'image

--- a/src/components/vote/template.pug
+++ b/src/components/vote/template.pug
@@ -31,4 +31,4 @@ shell-app
           use(xlink:href="#ico-leftArrow")
   
   layer-popin(v-show="displayedPopin")
-    share-popin(@displayPopin="displayPopin" :id="getId" :brand="vote.brand" :desc="vote.desc" :logo="vote.logo")
+    share-popin(@displayPopin="displayPopin" :id="getId" :url="url" :brand="vote.brand" :desc="vote.desc" :logo="vote.logo")
