Optin de vote et creation composant de popin

--- a/src/assets/style/utils/atom.less
+++ b/src/assets/style/utils/atom.less
@@ -159,6 +159,11 @@
 }
 
 
+// ----- TOP / BOT DISPOSITION -----
+//
+.p-bot-0{ bottom: auto; }
+
+
 // ----- Z-INDEX POSITION -----
 //
 .z-5000{ z-index: 5000; }
