Ajout store popin pour le composant de settings user

--- a/src/components/user/template.pug
+++ b/src/components/user/template.pug
@@ -7,7 +7,7 @@ shell-app
     
     user-content(:user="user")
       
-    layer-popin(v-show="displayPopin")
-      user-settings(@displayPopin="displayPopin = $event")
+    layer-popin(v-show="displayedPopin")
+      user-settings
 
   
