--- a/src/components/contest/validation-rules/template.pug
+++ b/src/components/contest/validation-rules/template.pug
@@ -25,4 +25,4 @@ div
   //-   input(type="file" :disabled="rulesAccepted === false")#participer.o-participation
   //-   label(for="participer" :class="{'s--is-disabled': rulesAccepted === false}").o-participation__label Participer
    
-  a(@click="$emit('update:popin', false)").no-link.d-block.mt-2.f-right.pr-2.pb-1.f-grey.f-dec-it annuler
+  a(@click="$store.commit('popinHide')").no-link.d-block.mt-2.f-right.pr-2.pb-1.f-grey.f-dec-it annuler
