Disparition bouton photo en cas de null photos

--- a/src/components/contest/template.pug
+++ b/src/components/contest/template.pug
@@ -25,7 +25,7 @@ shell-app
               
       div.d-col-flex.mt-2.pr-4.pl-4
         a(@click="$store.commit('popinDisplay')" v-if="!contest.participation").f-bold.f-sfat.pt-05.pb-05.f-center.c-grad-yo.shadbox-light.brad-4 Participer
-        router-link(:to="$route.path +'/vote'").no-link.f-center.shadbox-light.pt-1.pb-1.mt-1.brad-4 
+        router-link(:to="$route.path +'/vote'" v-if="!contest.closed && contest.hasPhoto").no-link.f-center.shadbox-light.pt-1.pb-1.mt-1.brad-4 
           svg(viewBox="0 0 42 42").mt-neg025.o-svgh-ico.o-svg-btn.mr-05.va-mid
             use(xlink:href="#ico-vote")
           span Photos
