Récupération nom de marque via API et affichage

--- a/src/components/contest/layout/template.pug
+++ b/src/components/contest/layout/template.pug
@@ -11,7 +11,7 @@ main.o-main.c-backbg.pb-1
     .pl-2.pr-2  
       .o-tile__info
         img(:src="contest.logo" alt="logo").o-tile__logo.b-10.brad-100
-        h2.o-tile__name.p-hcenter-rel.f-cap.f-st {{ contest.brand }}
+        h2.o-tile__name.p-hcenter-rel.f-cap.f-st {{ contest.brandName }}
         h3.o-tile__desc.p-hcenter-rel.f-grey.f-cap.f-light.f-stl {{ contest.desc }}
   
   slot
