--- a/src/components/contest/template.pug
+++ b/src/components/contest/template.pug
@@ -36,4 +36,4 @@ shell-app
       
     //- popin de reglement ici
     layer-popin(v-show="displayedPopin")
-      validation-rules(:brand="contest.brand" :logo="contest.logo" :desc="contest.desc" :rules="contest.rules" :ban="contest.ban")
+      validation-rules(:brandName="contest.brandName" :logo="contest.logo" :desc="contest.desc" :rules="contest.rules" :ban="contest.ban")
