--- a/src/components/contest/validation-rules/template.pug
+++ b/src/components/contest/validation-rules/template.pug
@@ -4,7 +4,7 @@ div
       .d-row-flex.d-flex-spacebet.d-flex-vm
         img(:src="logo" alt="logo").o-tile__logo--long.b-1.brad-100
         span.va-mid.pl-1
-          span.d-block.f-stm.f-bold {{ brand }}
+          span.d-block.f-stm.f-bold {{ brandName }}
           span.d-block.f-cap.f-stl.f-lgrey.f-reg {{ desc }}
         
   .o-popin-ovrflw.pl-2.pr-2.mt-2
