--- a/src/components/flux/podium/template.pug
+++ b/src/components/flux/podium/template.pug
@@ -3,7 +3,7 @@ div
     a(href="#").no-link.d-row-flex.d-flex-spacebet.d-flex-vm
       img(:src="data.logo" alt="logo").o-tile__logo--long.b-1.brad-100
       span.va-mid
-        span.pl-1.f-stm.pr-05.f-bold {{ data.brand }}
+        span.pl-1.f-stm.pr-05.f-bold {{ data.brandName }}
         span.f-cap.f-stl.f-lgrey.f-reg {{ data.desc }}
         
     //- a(href="#").no-link
