--- a/src/components/flux/tile/template.pug
+++ b/src/components/flux/tile/template.pug
@@ -9,7 +9,7 @@ div
     img(:src="data.ban", alt="").full-width
     .o-tile__info 
       img(:src="data.logo" alt="logo").o-tile__logo.b-10.brad-100
-      h2.o-tile__name.p-hcenter-rel.f-cap.f-st {{ data.brand }}
+      h2.o-tile__name.p-hcenter-rel.f-cap.f-st {{ data.brandName }}
       h3.o-tile__desc.p-hcenter-rel.f-grey.f-cap.f-light.f-stl {{ data.desc }}
         
       //- CLOSED
