Consolidation sécurité agreement et typage des infos contests

--- a/src/components/contest/template.pug
+++ b/src/components/contest/template.pug
@@ -1,5 +1,5 @@
 shell-app
-  contest-layout(:data="contest")
+  contest-layout(:contest="contest")
       
     //- block a changer dans validation et info
     block contestContent
