--- a/src/components/vote/share-popin/template.pug
+++ b/src/components/vote/share-popin/template.pug
@@ -4,7 +4,7 @@ div
       use(xlink:href="#ico-arrow")
         
   .d-row-flex.f-center.d-flex-vm.d-flex-hm.mb-1.mt-2   
-    AppContestInfos(:logo="logo" :brand="brand" :desc="desc" :id="$route.params.id"  )
+    AppContestInfos(:logo="logo" :brandName="brandName" :desc="desc" :id="parseInt($route.params.id)"  )
 
   hr.o-sep
               
