retrait bouton de config sur une page user qui n'est pas la notre

--- a/src/assets/style/utils/atom.less
+++ b/src/assets/style/utils/atom.less
@@ -261,6 +261,7 @@
 .mb-0{ margin-bottom: 0; }
 
 
+
 .shadbox-light{
   box-shadow: 0 0 4px rgba(0,0,0, .35);
 }
@@ -271,6 +272,7 @@
   transform: rotate(180deg);
   transform-origin: center;
 }
+.op-0{ opacity: 0; }
 
 .ttransY-neg50{ transform: translate3d(0, -50%, 0); }
 
