--- a/src/components/user/profile/template.pug
+++ b/src/components/user/profile/template.pug
@@ -8,6 +8,9 @@
     span.pl-1.f-bold.f-stm {{ user.name }}
     span.pl-05.f-grey.f-stl {{ user.id }}
   
-  button(@click="$store.commit('popinDisplay')" value="config", type="button")
+  button(v-if="isMyProfile" @click="$store.commit('popinDisplay')" value="config", type="button").p-05
+    svg(viewBox="0 0 35.37 35.35").o-svg-btn.va-mid
+      use(xlink:href="#ico-config") 
+  div(v-else).p-05.op-0
     svg(viewBox="0 0 35.37 35.35").o-svg-btn.va-mid
       use(xlink:href="#ico-config") 
