--- a/src/components/layout/header/template.pug
+++ b/src/components/layout/header/template.pug
@@ -1,5 +1,5 @@
 header.o-main-header.p-init.w-100
-  nav.d-row-flex.d-flex-spacebet.h-100.pt-05.pr-1.pl-1
+  nav.d-row-flex.d-flex-spacebet.h-100.pt-025.pr-1.pl-1
     router-link(to="/flux", title="Flux").o-inlinebox.h-100
       svg(viewBox="0 0 304.29 250").o-svgh-ico
         use(xlink:href="#ico-puzzle")
@@ -8,5 +8,7 @@ header.o-main-header.p-init.w-100
       //- zone de notif --
       span.o-notif.p-abs.brad-100
       //- fin de zone de notif --
-      svg(viewBox="0 0 304.29 284").o-svgh-ico
-        use(xlink:href="#ico-profil")
+      div
+        img(:src="userPicture").o-profilepic
+      //- svg(viewBox="0 0 304.29 284").o-svgh-ico
+      //-   use(xlink:href="#ico-profil")
