--- a/src/components/layout/shell/template.pug
+++ b/src/components/layout/shell/template.pug
@@ -1,4 +1,4 @@
 div
-  <app-header v-if="$route.path !== '/'"/>
+  <the-header v-if="$route.path !== '/'"/>
   <slot/>
-  <app-footer v-if="$route.path !== '/'"/>
+  <the-footer v-if="$route.path !== '/'"/>
