Ajout de la barre de recherche

--- a/src/assets/style/utils/layout.less
+++ b/src/assets/style/utils/layout.less
@@ -41,6 +41,10 @@ button{
   margin: 0 auto;
 }
 
+.o-main--search{
+  padding-top: @maintop-margin + @space-h-unit;
+}
+
 .o-main__container{
   @media (min-width: @tab){
       padding: 0 @space * 6;
