--- a/src/components/RouteFlux/template.pug
+++ b/src/components/RouteFlux/template.pug
@@ -1,5 +1,5 @@
 shell-app
-  main.o-main.o-grid.pl-1.pr-1.pb-1.d-flex.p-center-auto
+  main.o-main.o-main--search.o-grid.pl-1.pr-1.pb-1.d-flex.p-center-auto
     .grid-col.grid-col--1.d-flex-eq
     .grid-col.grid-col--2.d-flex-eq
     .grid-col.grid-col--3.d-flex-eq
