--- a/src/assets/style/utils/atom.less
+++ b/src/assets/style/utils/atom.less
@@ -12,10 +12,10 @@
 }
 .no-deco{
   outline: none;
-  box-shadow: none;
+  // box-shadow: none;
   &:focus{
     outline: none;
-    box-shadow: none;
+    // box-shadow: none;
   }
 }
 
@@ -122,6 +122,7 @@
 
 .b-10{ border-width: @space / 3; }
 .b-1{ border-width: 1px; }
+.b-0{ border: 0; }
 
 .b-noresize{ resize: none; }
 
