--- a/src/components/AppLayout/TheHeader/template.pug
+++ b/src/components/AppLayout/TheHeader/template.pug
@@ -1,14 +1,18 @@
 header.o-main-header.p-init.w-100
-  nav.d-row-flex.d-flex-spacebet.h-100.pt-025.pr-1.pl-1
-    router-link(to="/flux", title="Flux").o-inlinebox.h-100
-      svg(viewBox="0 0 304.29 250").o-svgh-ico
-        use(xlink:href="#ico-puzzle")
-          
-    router-link(:to="'/user/' + userId", title="Profil").p-rel.o-inlinebox.h-100
-      //- zone de notif --
-      span.o-notif.p-abs.brad-100
-      //- fin de zone de notif --
-      div
-        img(:src="userPicture").o-profilepic
-      //- svg(viewBox="0 0 304.29 284").o-svgh-ico
-      //-   use(xlink:href="#ico-profil")
+  .o-main-header__nav
+    nav.d-row-flex.d-flex-spacebet.h-100.pt-025.pr-1.pl-1
+      router-link(to="/flux", title="Flux").o-inlinebox.h-100
+        svg(viewBox="0 0 304.29 250").o-svgh-ico
+          use(xlink:href="#ico-puzzle")
+            
+      router-link(:to="'/user/' + userId", title="Profil").p-rel.o-inlinebox.h-100
+        //- zone de notif --
+        span.o-notif.p-abs.brad-100
+        //- fin de zone de notif --
+        div
+          img(:src="userPicture").o-profilepic
+        //- svg(viewBox="0 0 304.29 284").o-svgh-ico
+        //-   use(xlink:href="#ico-profil")
+  
+  div(v-if="$route.name === 'Flux'").o-search.pl-1.pr-1.mt-1
+    input(type="text" placeholder="Rechercher").w-100.p-1.b-0.shadbox-light.brad-4.f-si.no-deco
