Liaison de l'id contest jusqu'à l'upload

--- a/src/components/RouteContest/template.pug
+++ b/src/components/RouteContest/template.pug
@@ -36,4 +36,4 @@ shell-app
       
     //- popin de reglement ici
     layer-popin(v-show="displayedPopin")
-      validation-rules(:brandName="contest.brandName" :logo="contest.logo" :desc="contest.desc" :rules="rules" :ban="contest.ban")
+      validation-rules(:brandName="contest.brandName" :id="contest.id" :logo="contest.logo" :desc="contest.desc" :rules="rules" :ban="contest.ban")
