Ordre dans les composants de user

--- a/src/assets/style/utils/atom.less
+++ b/src/assets/style/utils/atom.less
@@ -108,6 +108,7 @@
 
 // styles
 .f-cap{ text-transform: capitalize; }
+.lineh-1{ line-height: 1; }
 
 // ----- BORDER -----
 //
@@ -243,6 +244,8 @@
 .ml-2{ margin-left: @space * 2; }
 .mb-2{ margin-bottom: @space * 2; }
 
+.pr-3{ padding-right: @space * 3; }
+.pl-3{ padding-left: @space * 3; }
 .mt-3{ margin-top: @space * 3; }
 
 .mt-4{ margin-top: @space * 4; }
