--- a/src/components/RouteUser/UserProfile/template.pug
+++ b/src/components/RouteUser/UserProfile/template.pug
@@ -3,10 +3,10 @@
     svg(viewBox="0 0 29.67 25.71").o-svg-btn.va-mid
       use(xlink:href="#ico-arrow")
         
-  div.d-row-flex.d-flex-vm
-    img(:src="user.portrait").o-profil-pic.brad-100
-    span.pl-1.f-bold.f-stm {{ user.name }}
-    span.pl-05.f-grey.f-stl {{ user.id }}
+  div.d-row-flex.d-flex-vm.pr-3.pl-3
+    img(:src="user.picture").o-profil-pic.brad-100
+    span.pl-1.f-bold.f-stm.lineh-1 {{ user.name }}
+    span.pl-05.f-grey.f-sxs.lineh-1.f-break {{ user.provider_id }}
   
   button(v-if="isMyProfile" @click="$store.commit('popinDisplay')" value="config", type="button").p-05
     svg(viewBox="0 0 35.37 35.35").o-svg-btn.va-mid
