Retrait vieux code sans store

--- a/src/components/RouteUser/template.pug
+++ b/src/components/RouteUser/template.pug
@@ -1,6 +1,6 @@
 shell-app
   main.o-main.pl-1.pr-1.pb-1
-    UserProfile(@displayPopin="displayPopin = $event")
+    UserProfile
 
     UserNotification
     UserContent
