--- a/src/components/RouteIndex/template.pug
+++ b/src/components/RouteIndex/template.pug
@@ -3,7 +3,7 @@
     .i-header__brand
       img(srcset="~@/assets/img/hepic@2x.png 2x, ~@/assets/img/hepic@1x.png 1x" src="~@/assets/img/hepic@1x.png" alt="Logo Hepic").i-header__logo
       h1.i-main__title Trouvez, tentez et gagnez des concours photo gratuits et faits pour vous
-    install-btn
+    InstallBtn
     
   section.i-section
     .i-section__pane.i-section__pane--ft
@@ -18,7 +18,7 @@
             
     .i-section__social
       span.i-subtitle Lancez-vous !
-      social-btn
+      SocialBtn
           
     .i-section__pane.i-section__pane--ft.i-bg-skew
       .i-section__img.i-section__img--isskewed
