Récupération dans la liste du store user

--- a/src/components/RouteImage/template.pug
+++ b/src/components/RouteImage/template.pug
@@ -9,14 +9,14 @@ shell-app
         .o-width-container.d-inblock
           .o-tile__infos--long.d-row-flex.d-flex-spacebet.d-flex-vm.pt-2.pb-1
             router-link(to="/user").no-link.d-row-flex.d-flex-spacebet.d-flex-vm 
-              img(:src="media.winner.portrait" alt="logo").o-tile__logo--long.b-1.brad-100.mt-neg025
+              //- img(:src="media.winner.portrait" alt="logo").o-tile__logo--long.b-1.brad-100.mt-neg025
               span.va-mid
-                span.pl-1.f-stm.pr-1.f-grey {{ media.winner.name }}
+                //- span.pl-1.f-stm.pr-1.f-grey {{ media.winner.name }}
                 div(:class="{'o-ico-sprite--none': Number.isInteger(media.rank), 'o-ico-sprite--or': media.rank === 'gold', 'o-ico-sprite--argent': media.rank === 'silver', 'o-ico-sprite--bronze': media.rank === 'bronze'}").o-ico-sprite.o-ico-sprite--inline.va-mid.mt-neg025.f-center    
             a(@click="displayPopin").no-link
               span.o-more
                 
-          img(:src="media.image").o-plain-img.o-plain-img--large
+          img(:src="media.file").o-plain-img.o-plain-img--large
 
-    layer-popin(v-show="displayedPopin")
-      info-popin(@displayPopin="displayPopin" :id="getId" :brand="media.brand" :desc="media.desc" :logo="media.logo") 
+    //- layer-popin(v-show="displayedPopin")
+    //-   info-popin(@displayPopin="displayPopin" :id="getId" :brand="media.brand" :desc="media.desc" :logo="media.logo") 
